# 3d-model-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeKits.json  CMakeLists.txt  Jak sestavit pro windows.txt  LICENSE  README.md  generate_vs_sollution_win.bat
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
res/: basic.frag  basic.vert
res/testovaci_modely/pumpkin/: pumpkin.glb
res/testovací_model/cat/: cat.fbx
src/: ViewerApp.hpp  basic.frag  basic.vert  constants.hpp  defines.hpp  main.cpp
src/Core/: ArcBallCamera.cpp  ArcBallCamera.hpp  CameraSystem.cpp  CameraSystem.hpp  Core.cpp  Core.hpp  FpsCamera.cpp  FpsCamera.hpp  GLDebug.cpp  GLDebug.hpp  Keyboard.cpp  Keyboard.hpp  OpenglAPI.cpp  OpenglAPI.hpp  OpenglData.cpp  OpenglData.hpp  PerfData.cpp  PerfData.hpp  StaticCamera.cpp  StaticCamera.hpp  Window.cpp  Window.hpp
src/GUI/: WindowSystem.cpp  WindowSystem.hpp
src/Graphics/: BufferObjects.cpp  BufferObjects.hpp  ImguiRendering.cpp  ImguiRendering.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Tools/: FileDialog.cpp  FileDialog.hpp  Log.cpp  Log.hpp  ModelLoader.cpp  ModelLoader.hpp
